# at

./: .clang-format  CMakeLists.txt  README.md  makefile
inc/: at.h  stopwatch.h  tui.h
src/: at.cpp  main.cpp  stopwatch.cpp  tui.cpp
